feat(CAT46): language support finished

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -3,5 +3,43 @@
   "footerContact": "Contacto",
   "footerPrivacy": "Política de privacidad",
   "footerLegal": "Aviso legal",
-  "footerLocation": "Ubicación"
+  "footerLocation": "Ubicación",
+  "cta_alt_cats": "Gatitos de la protectora",
+  "cta_text": "Sin ti, no podemos seguir adelante",
+  "cta_heading": "HAZTE SOCIO",
+  "cta_alt_scratch": "Rasguño decorativo",
+  "slider_title": "Gatos en adopción",
+  "slider_loading": "Cargando adorables gatitos...",
+  "slider_error": "No se pudieron cargar los gatos. Intenta recargar la página.",
+  "slider_aria_prev": "Anterior gato",
+  "slider_aria_next": "Siguiente gato",
+  "slider_aria_goto": "Ir al gato {{number}}",
+  "catCard_alt": "Foto de {{name}}",
+  "catCard_adoptMe": "Adóptame",
+  "form_title": "Busca aquí a tu nuevo amigo",
+  "form_label_breed": "Raza:",
+  "form_breed_siamese": "Siamés",
+  "form_breed_maine_coon": "Maine Coon",
+  "form_breed_british_shorthair": "Británico de pelo corto",
+  "form_label_size": "Tamaño:",
+  "form_size_small": "Pequeño",
+  "form_size_medium": "Mediano",
+  "form_size_large": "Grande",
+  "form_label_age": "Edad:",
+  "form_age_less_than_1": "Menos de 1 año",
+  "form_age_2_to_4": "2-4 años",
+  "form_age_more_than_4": "4 años y más",
+  "form_label_sex": "Sexo:",
+  "form_sex_male": "Macho",
+  "form_sex_female": "Hembra",
+  "form_submit_button": "Buscar",
+  "adoptPage_wip_1": "¡El gato trabaja todo lo rápido que puede!",
+  "adoptPage_wip_2": "La página de adopción estará lista tan pronto como nos sea posible.",
+  "adoptPage_alt_wip_cat": "Gato trabajando",
+  "mapPage_title": "¿Dónde Estamos?",
+  "mapPage_address": "Avenida Gatuna Nº13",
+  "shelter_name_1": "Adopta un Michi",
+  "shelter_name_2": "Locura Gatuna",
+  "shelter_name_3": "Huellas del Sella",
+  "shelter_name_4": "Fundación Protectora del Principado"
 }
