fix(CATADOPT) Languages and images fixed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -41,5 +41,23 @@
   "shelter_name_1": "Adopt a Michi",
   "shelter_name_2": "Feline Madness",
   "shelter_name_3": "Sella's Pawprints",
-  "shelter_name_4": "Principality's Protection Foundation"
+  "shelter_name_4": "Principality's Protection Foundation",
+  "header_nav_home": "Home",
+  "header_nav_adopt": "Adopt",
+  "header_nav_map": "Map",
+  "header_nav_favorites": "Favorites",
+  "header_aria_open_menu": "Open menu",
+  "header_aria_close_menu": "Close menu",
+  "header_aria_logo": "Adopt a Michi Logo",
+  "header_aria_menu_icon": "Menu icon",
+  "header_aria_theme_toggle": "Change to {{theme}} mode",
+  "catCard_alt_is_favorite": "Remove from favorites",
+  "catCard_alt_is_not_favorite": "Add to favorites",
+  "toast_added_to_favorites": "{{name}} has been added to favorites! 🐾",
+  "toast_removed_from_favorites": "{{name}} has been removed from favorites ☹️",
+  "favPage_title": "My Favorite Cats",
+  "favPage_clear_all": "Remove All",
+  "favPage_no_favorites_title": "You have no favorite cats 🐾",
+  "favPage_no_favorites_subtitle": "Add some from the main page.",
+  "toast_cleared_favorites": "You have no heart...💔"
 }
