--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -41,5 +41,23 @@
   "shelter_name_1": "Adopta un Michi",
   "shelter_name_2": "Locura Gatuna",
   "shelter_name_3": "Huellas del Sella",
-  "shelter_name_4": "Fundación Protectora del Principado"
+  "shelter_name_4": "Fundación Protectora del Principado",
+  "header_nav_home": "Inicio",
+  "header_nav_adopt": "Adoptar",
+  "header_nav_map": "Mapa",
+  "header_nav_favorites": "Favoritos",
+  "header_aria_open_menu": "Abrir menú",
+  "header_aria_close_menu": "Cerrar menú",
+  "header_aria_logo": "Logo de Adopta un Michi",
+  "header_aria_menu_icon": "Icono del menú",
+  "header_aria_theme_toggle": "Cambiar a modo {{theme}}",
+  "catCard_alt_is_favorite": "Quitar de favoritos",
+  "catCard_alt_is_not_favorite": "Añadir a favoritos",
+  "toast_added_to_favorites": "¡{{name}} ha sido añadido a favoritos! 🐾",
+  "toast_removed_from_favorites": "{{name}} ha sido eliminado de favoritos ☹️",
+  "favPage_title": "Mis gatos favoritos",
+  "favPage_clear_all": "Eliminar todos",
+  "favPage_no_favorites_title": "No tienes gatos en favoritos 🐾",
+  "favPage_no_favorites_subtitle": "Agrega algunos desde la página principal.",
+  "toast_cleared_favorites": "No tienes corazón...💔"
 }
