feat/cat-36 add user form + connect translator+ add cat-37

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -41,5 +41,22 @@
   "shelter_name_1": "Adopta un Michi",
   "shelter_name_2": "Locura Gatuna",
   "shelter_name_3": "Huellas del Sella",
-  "shelter_name_4": "Fundación Protectora del Principado"
+  "shelter_name_4": "Fundación Protectora del Principado",
+  "formUserData_title": "Para contactarte, completa el formulario",
+"formUserData_label_firstName": "Nombre",
+"formUserData_error_firstName_required": "El nombre es obligatorio",
+"formUserData_error_firstName_min": "Mínimo 3 caracteres",
+"formUserData_label_email": "Correo electrónico",
+"formUserData_error_email_required": "El correo electrónico es obligatorio",
+"formUserData_error_email_invalid": "Formato de correo electrónico no válido",
+"formUserData_label_phone": "Número de teléfono",
+"formUserData_error_phone_required": "El número de teléfono es obligatorio",
+"formUserData_error_phone_invalid": "Formato de número de teléfono no válido",
+"formUserData_label_message": "Mensaje",
+"formUserData_placeholder_firstName": "Sofía",
+"formUserData_placeholder_email": "ejemplo@ejemplo.com",
+"formUserData_placeholder_phone": "612345678",
+"formUserData_placeholder_message": "Mensaje",
+"formUserData_submit": "¡Enviar!"
+
 }
