--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -41,5 +41,22 @@
   "shelter_name_1": "Adopt a Michi",
   "shelter_name_2": "Feline Madness",
   "shelter_name_3": "Sella's Pawprints",
-  "shelter_name_4": "Principality's Protection Foundation"
+  "shelter_name_4": "Principality's Protection Foundation",
+  "formUserData_title": "To contact you - fill out the form",
+"formUserData_label_firstName": "First Name",
+"formUserData_error_firstName_required": "First name is required",
+"formUserData_error_firstName_min": "Minimum 3 characters",
+"formUserData_label_email": "Email",
+"formUserData_error_email_required": "Email is required",
+"formUserData_error_email_invalid": "Invalid email format",
+"formUserData_label_phone": "Phone number",
+"formUserData_error_phone_required": "Phone number is required",
+"formUserData_error_phone_invalid": "Invalid phone number format",
+"formUserData_label_message": "Message",
+"formUserData_placeholder_firstName": "Sophia",
+"formUserData_placeholder_email": "example@example.com",
+"formUserData_placeholder_phone": "612345678",
+"formUserData_placeholder_message": "Message",
+"formUserData_submit": "Send!"
+
 }
