--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -75,5 +75,8 @@
   "formUserData_placeholder_email": "example@example.com",
   "formUserData_placeholder_phone": "612345678",
   "formUserData_placeholder_message": "Message",
-  "formUserData_submit": "Send!"
+  "formUserData_submit": "Send!",
+  "formUserData_toast_success": "Form submitted successfully! 🐱",
+  "formUserData_toast_error": "Please check the form fields 🚨"
+
 }
